# T3Vtech-3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/fonts/: source.txt
assets/shooting-range/: rocket_launcher.mtl  skybox
cmake/: FindSDL2_ttf.cmake
doc/: CMakeLists.txt  api.md  building.md  dev-notes.txt  potential-performance-improvements.txt
screenshots/: 21.12.08-a-3d-modell.mkv  21.12.13-several-directional-lights.mkv  21.12.14-camera-position.mkv  21.12.16-camera-rotation.mkv  21.12.22-model-viewer-1.mkv  21.12.22-model-viewer-2.mkv  22.03.07-first-3d-collision-aabb.mkv
shaders/: std_2d_fragment.glsl  std_2d_vertex.glsl  std_3d_fragment.glsl  std_3d_vertex.glsl  std_fragment.glsl
src/: test.c
src/demo-shooting-range/: main.cpp  player.cpp  player.hpp  rocket.cpp  rocket.hpp  shooting-range.hpp  shooting_range.cpp  world.cpp  world.hpp
src/engine/: global.c  init.c  init.h  tt.h
src/engine/audio/: audio.c  audio.h  wav.c
src/engine/common/: color.h  global.c  init.c  init.h  list.c  list.h  new_frame.c  new_frame.h  quit.c  quit.h  time.c  time.h
src/engine/common/collision/3D/: collision.c  collision.h
src/engine/debug/: debug.h  debug_text.c  logging.c  logging.h
src/engine/gfx/: camera.c  camera.h  fog.c  fog.h  gfx.h  gfx_init.c  gfx_quit.c  shaders.c  shaders.h  vertex.h
src/engine/gfx/lighting/: ambient_lighting.c  ao_light.c  common.c  directional_light.c  lighting.h  point_light.c
src/engine/gfx/objects/2d/fonts/: fonts.h
src/engine/gfx/objects/2d/objects/: common.c  objects.h  sprite.c  text.c
src/engine/gfx/objects/2d/textures/: text.c  textures.c  textures.h
src/engine/gfx/objects/3d/: common.c  objects.h  quad.c
src/engine/gfx/objects/3d/objects/: batch_object.c  common.c  cube.c  custom_model.c  objects.h  quad.c
src/engine/gfx/objects/3d/objects/batch_objects/: batch_object.c  batch_object.h
src/engine/gfx/objects/3d/objects/custom_models/: custom_model.c  custom_model.h  obj.c  obj.h
src/engine/gfx/objects/3d/textures/: text.c  textures.c  textures.h
src/engine/gfx/objects/fonts/: fonts.c
src/engine/gfx/renderer/: 2d.c  3d.c  render.c  renderer.h
src/engine/input/: common.c  controller.c  controller_map.h  input.h  keyboard.c  keyboard_map.h  mouse.c  mouse_map.h
src/engine/math/: float.c  float.h  math.h  matrix.c  matrix.h  vector.c  vector.h
src/tests/2d_transparency/: 2d_transparency.c
src/tests/audio/: audio.c
src/tests/batch_rendering/: batch_rendering.c
src/tests/input/: input.c
src/tests/rendering_visible_and_invisible/: rendering_visible_and_invisible.c
src/tests/text_overlay/: text_overlay.c
src/tests/textures/: 3d_textures.c
src/ttmv/: sys.cpp  ttmv.cpp  ttmv.hpp
